welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: method vuBiscuit has return statement; needs result type
	if(estSurBiscuit() == true){return true}else{return false}
                                    ^Program:5: error: method vuBiscuit has return statement; needs result type
	if(estSurBiscuit() == true){return true}else{return false}
                                                     ^Program:7: error: type mismatch;
 found   : Unit
 required: Boolean
while(vuBiscuit != true){
^